Revert "fix: hashtag alignment fix"
This reverts commit 4094fdd1f4cff8093061186ad9786c08baa00f4c.

--- a/src/_includes/assets/css/screen.css
+++ b/src/_includes/assets/css/screen.css
@@ -2400,7 +2400,6 @@ a.banner:hover span {
 .rtl-layout .post-card-tags a {
   padding-right: 0;
   padding-left: 15px;
-  direction: ltr;
 }
 
 @media (min-width: 768px) {
